# habit_tracker

./: .coverage  .coveragerc  .env  .env example  .flake8  .gitignor  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
config/: settings.py  urls.py
docker/django/: Dockerfile
habits/: __init__.py  apps.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
habits/tests/: test_models.py  test_validators.py  test_views.py
nginx/: default.conf
telegram_bot/: tasks.py
telegram_bot/tests/: test_tasks.py
test_proj/test_proj/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
